--- a/11. React_Introducao/01-fundamentos/src/index.css
+++ b/11. React_Introducao/01-fundamentos/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  /* toda o html */
+  margin: 0; /* margem */
+  padding: 0; /* padding */
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: #f1f5f8;
+  color: #222;
+}
+
+.booklist {
+  width: 90vw; /* 90% da largura do ecra */
+  max-width: 1170px; /* no máximo 1170px */
+  margin: 5rem auto;
+  display: grid;
+  gap: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  /* se width>= 768 adota a estrutura de grid-columns*/
+  .booklist {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.book {
+  background: #fff;
+  border-radius: 1rem; /* arredondar bordas */
+  padding: 2rem;
+  text-align: center; /* texto ao centro */
+}
+.book img {
+  /*img filhas de classe book*/
+  width: 100%; /* preenche todo o cartao */
+  object-fit: cover;
+}
+.book h2 {
+  /*h2 filhas de classe book*/
+  margin-top: 1rem;
+  font-size: 1rem;
 }
