--- a/15. React - Projeto 3/mixmaster/src/index.css
+++ b/15. React - Projeto 3/mixmaster/src/index.css
@@ -335,3 +335,33 @@ PROJECT CSS
   color: var(--grey-500);
   margin-top: 2rem;
 }
+
+/* ERROR */
+.error div {
+  min-height: 100vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.error img {
+  width: 90vw;
+  max-width: 600px;
+  display: block;
+  margin-bottom: 2rem;
+  margin-top: -3rem;
+}
+.error h3 {
+  margin-bottom: 0.5rem;
+}
+
+.error p {
+  line-height: 1.5;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  color: var(--grey-500);
+}
+.error a {
+  color: var(--primary-500);
+  text-transform: capitalize;
+}
