--- a/15. React - Projeto 3/mixmaster/src/index.css
+++ b/15. React - Projeto 3/mixmaster/src/index.css
@@ -407,3 +407,48 @@ PROJECT CSS
     color: var(--grey-500);
   }
 }
+
+/* SINGLE PRODUCT */
+
+.single-cocktail header {
+  text-align: center;
+  margin-bottom: 3rem;
+  .btn {
+    margin-bottom: 1rem;
+  }
+}
+.single-cocktail .img {
+  border-radius: var(--borderRadius);
+}
+.single-cocktail .drink-info {
+  padding-top: 2rem;
+}
+.single-cocktail .drink p {
+  font-weight: 700;
+  text-transform: capitalize;
+  line-height: 2;
+  margin-bottom: 1rem;
+}
+.single-cocktail .drink-data {
+  margin-right: 0.5rem;
+  background: var(--primary-300);
+  padding: 0.25rem 0.5rem;
+  border-radius: var(--borderRadius);
+  color: var(--primary-700);
+  letter-spacing: var(--letterSpacing);
+}
+.single-cocktail .ing {
+  display: inline-block;
+  margin-right: 0.5rem;
+}
+@media (min-width: 992px) {
+  .single-cocktail .drink {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    gap: 3rem;
+    align-items: center;
+  }
+  .single-cocktail .drink-info {
+    padding-top: 0;
+  }
+}
